--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,25 @@
-plugins {
-    id 'java'
-}
+apply plugin: "application"
+apply plugin: "java"
 
-version '1.0-SNAPSHOT'
+version '1.0'
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 //sourceCompatibility = 1.8
 
+mainClassName = 'com.rest.JavaClient'
+group 'com.rest'
+description 'Simple Java Rest API'
+
 repositories {
     mavenCentral()
+}
+
+installDist {
+    into("config") {
+        from 'config'
+        include '*'
+    }
 }
 
 dependencies {
